--- a/disclaimer.html
+++ b/disclaimer.html
@@ -3,152 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legal Disclaimer | Proprius Recovery</title>
-    <meta name="description" content="Legal disclaimer for Proprius Recovery services. Important information about our services, limitations, and legal notices.">
+    <title>Disclaimer | Proprius Recovery - Medical Revenue Recovery Services</title>
+    <meta name="description" content="Legal disclaimer for Proprius Recovery Inc. Important information about our medical revenue recovery services, limitations, and legal notices.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.proprius-recovery.com/disclaimer.html">
+    <meta property="og:title" content="Disclaimer | Proprius Recovery">
+    <meta property="og:description" content="Legal disclaimer for Proprius Recovery medical revenue recovery services.">
+    <meta property="og:url" content="https://www.proprius-recovery.com/disclaimer.html">
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
     <style>
-        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--accent-red-light:#ef4444;--text-light:#fff;--text-muted:#94a3b8;--text-dark:#1e293b;--bg-cream:#f8fafc;--bg-warm:#f1f5f9;--font-heading:'Montserrat',sans-serif;--font-body:'Open Sans',sans-serif;--transition:all 0.3s ease}
-        *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
-        html{scroll-behavior:smooth}
-        body{font-family:var(--font-body);color:var(--text-dark);background-color:var(--bg-cream);line-height:1.7}
-        .container{max-width:900px;margin:0 auto;padding:0 1.5rem}
-        .navbar{position:fixed;top:0;left:0;right:0;z-index:1000;padding:0.75rem 0;background:rgba(30,58,138,0.98);backdrop-filter:blur(20px);border-bottom:3px solid var(--accent-red)}
-        .navbar .container{max-width:1200px;display:flex;align-items:center;justify-content:space-between}
-        .logo{display:flex;align-items:center;gap:0.75rem;text-decoration:none}
-        .logo img{height:50px;width:auto}
-        .nav-links{display:flex;align-items:center;gap:2rem;list-style:none}
-        .nav-links a{color:var(--text-muted);text-decoration:none;font-size:0.95rem;font-weight:500;transition:var(--transition)}
-        .nav-links a:hover{color:var(--text-light)}
-        .btn{display:inline-flex;align-items:center;justify-content:center;padding:0.75rem 1.5rem;font-family:var(--font-body);font-size:0.9rem;font-weight:600;text-decoration:none;border-radius:6px;transition:var(--transition)}
-        .btn-primary{background:linear-gradient(135deg,#dc2626,#ef4444);color:#fff}
-        .btn-primary:hover{transform:translateY(-2px);box-shadow:0 8px 25px rgba(220,38,38,0.4)}
-        .page-header{background:linear-gradient(135deg,var(--primary-blue) 0%,#1e40af 100%);padding:10rem 0 4rem;text-align:center}
-        .page-header h1{font-family:var(--font-heading);font-size:clamp(2.5rem,5vw,3.5rem);color:var(--text-light);margin-bottom:1rem}
-        .page-header p{color:var(--text-muted);font-size:1.1rem}
-        .legal-content{padding:4rem 0}
-        .legal-content h2{font-family:var(--font-heading);font-size:1.75rem;color:var(--primary-blue);margin:2.5rem 0 1rem;padding-bottom:0.5rem;border-bottom:3px solid var(--accent-red)}
-        .legal-content h3{font-family:var(--font-heading);font-size:1.35rem;color:var(--primary-blue);margin:2rem 0 0.75rem}
-        .legal-content p{color:#475569;margin-bottom:1rem;font-size:1.05rem}
-        .legal-content ul,.legal-content ol{margin:1rem 0 1.5rem 1.5rem;color:#475569}
-        .legal-content li{margin-bottom:0.5rem;font-size:1.05rem}
-        .legal-content a{color:var(--accent-red);text-decoration:none}
-        .legal-content a:hover{text-decoration:underline}
-        .effective-date{background:var(--bg-warm);padding:1rem 1.5rem;border-radius:8px;border-left:4px solid var(--accent-red);margin-bottom:2rem}
-        .effective-date p{margin:0;font-weight:500}
-        .disclaimer-box{background:#fef2f2;border:1px solid #ef4444;border-radius:8px;padding:1.5rem;margin:1.5rem 0}
-        .disclaimer-box p{margin:0;color:#991b1b;font-weight:500}
-        .info-box{background:#eff6ff;border:1px solid #3b82f6;border-radius:8px;padding:1.5rem;margin:1.5rem 0}
-        .info-box p{margin:0;color:#1e40af}
-        .warning-box{background:#fef3c7;border:1px solid #f59e0b;border-radius:8px;padding:1.5rem;margin:1.5rem 0}
-        .warning-box p{margin:0;color:#92400e}
-        .footer{background:#0f172a;padding:3rem 0;text-align:center}
-        .footer p{color:var(--text-muted);font-size:0.9rem}
-        .footer-links{display:flex;justify-content:center;gap:2rem;margin-top:1rem;flex-wrap:wrap}
-        .footer-links a{color:var(--text-muted);text-decoration:none;font-size:0.9rem;transition:var(--transition)}
-        .footer-links a:hover{color:var(--accent-red-light)}
-        @media(max-width:768px){.nav-links{display:none}.page-header{padding:8rem 0 3rem}}
+        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--text-dark:#1e293b;--text-body:#475569;--bg-light:#f8fafc}
+        *{box-sizing:border-box;margin:0;padding:0}
+        body{font-family:'Open Sans',sans-serif;color:var(--text-dark);background:var(--bg-light);line-height:1.8}
+        h1,h2,h3{font-family:'Montserrat',sans-serif;color:var(--primary-blue)}
+        .navbar{background:var(--primary-blue);padding:1rem 0;border-bottom:3px solid var(--accent-red)}
+        .navbar .container{max-width:1200px;margin:0 auto;padding:0 1.5rem;display:flex;align-items:center;justify-content:space-between}
+        .logo img{height:50px}
+        .nav-link{color:#fff;text-decoration:none;font-weight:600}
+        .content{max-width:900px;margin:0 auto;padding:4rem 1.5rem}
+        h1{font-size:2.5rem;margin-bottom:1rem}
+        .last-updated{color:var(--text-body);margin-bottom:2rem}
+        h2{font-size:1.5rem;margin:2rem 0 1rem;padding-top:1rem;border-top:1px solid #e2e8f0}
+        p,li{color:var(--text-body);margin-bottom:1rem}
+        ul{padding-left:1.5rem}
+        a{color:var(--accent-red)}
+        .highlight-box{background:#fef2f2;border-left:4px solid var(--accent-red);padding:1.5rem;margin:2rem 0;border-radius:0 8px 8px 0}
+        .footer{background:#0f172a;color:#94a3b8;padding:2rem 0;text-align:center;margin-top:4rem}
+        .footer a{color:#ef4444}
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo"><img src="logo.png" alt="Proprius Recovery"></a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#contact" class="btn btn-primary">Get Free Analysis</a></li>
-            </ul>
+    <nav class="navbar"><div class="container"><a href="/" class="logo"><img src="logo.png" alt="Proprius Recovery"></a><a href="/" class="nav-link">← Back to Home</a></div></nav>
+    <main class="content">
+        <h1>Disclaimer</h1>
+        <p class="last-updated">Last Updated: January 24, 2025</p>
+        
+        <div class="highlight-box">
+            <p><strong>IMPORTANT:</strong> Please read this disclaimer carefully before using our website or services. By accessing this website or engaging our services, you acknowledge that you have read, understood, and agree to be bound by the terms of this disclaimer.</p>
         </div>
-    </nav>
 
-    <header class="page-header">
-        <div class="container">
-            <h1>Legal Disclaimer</h1>
-            <p>Important information about our services and limitations</p>
-        </div>
-    </header>
+        <h2>1. General Information</h2>
+        <p>The information provided on the Proprius Recovery Inc. website is for general informational purposes only. While we strive to keep the information accurate and up-to-date, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability of the information, products, services, or related graphics contained on this website.</p>
 
-    <main class="legal-content">
-        <div class="container">
-            <div class="effective-date">
-                <p><strong>Effective Date:</strong> January 1, 2025 | <strong>Last Updated:</strong> January 1, 2025</p>
-            </div>
+        <h2>2. Not Legal Advice</h2>
+        <p>The content on this website and information provided by Proprius Recovery Inc. does not constitute legal advice. The No Surprises Act, Independent Dispute Resolution process, and related healthcare regulations are complex legal matters. We strongly recommend that you consult with a qualified healthcare attorney for specific legal advice regarding your situation.</p>
 
-            <h2>1. General Information Only</h2>
-            <p>The information provided on this website is for general informational purposes only. Nothing on this website constitutes legal, financial, medical, or professional advice. You should consult with appropriate professionals before making any decisions based on information found on this website.</p>
+        <h2>3. No Guarantee of Results</h2>
+        <p>While we present statistics about our success rates and average recovery amounts, these figures are based on historical performance and do not guarantee future results. Each case is unique, and outcomes depend on various factors including:</p>
+        <ul>
+            <li>The specific circumstances of each claim</li>
+            <li>Documentation quality and completeness</li>
+            <li>Insurance company policies and practices</li>
+            <li>IDR entity determinations</li>
+            <li>Applicable state and federal regulations</li>
+        </ul>
+        <p>Past performance is not indicative of future results, and we cannot guarantee any specific outcome for your claims.</p>
 
-            <h2>2. No Attorney-Client Relationship</h2>
-            <div class="disclaimer-box">
-                <p><strong>IMPORTANT:</strong> Visiting this website, reading its content, or submitting a contact form does NOT create an attorney-client relationship between you and Proprius Recovery Inc.</p>
-            </div>
-            <p>An attorney-client or professional relationship is only formed through a signed written agreement. Do not send confidential information until such a relationship has been established.</p>
+        <h2>4. Professional Services Disclaimer</h2>
+        <p>Proprius Recovery Inc. provides revenue recovery assistance services. We are not a law firm and do not provide legal services. Our services are limited to:</p>
+        <ul>
+            <li>Analysis and review of medical billing documents</li>
+            <li>Preparation of IDR submissions</li>
+            <li>Communication with insurance companies on your behalf</li>
+            <li>Administrative support for the arbitration process</li>
+        </ul>
 
-            <h2>3. No Guarantee of Results</h2>
-            <p>Past results do not guarantee future outcomes. Every case is different, and the outcome of any claim, appeal, or arbitration depends on the specific facts and circumstances involved. We make no representations or warranties about the outcome of any matter.</p>
+        <h2>5. Testimonials Disclaimer</h2>
+        <p>Testimonials and case studies presented on this website represent individual experiences and results. These testimonials are not indicative of future performance or success. Results will vary, and individual outcomes depend on many factors specific to each case.</p>
 
-            <h2>4. Testimonials and Case Studies</h2>
-            <p>Any testimonials or case studies presented on this website represent individual experiences and results. These results are not typical and should not be understood as a guarantee or prediction of the results you may achieve. Your results may vary significantly.</p>
+        <h2>6. Third-Party Links</h2>
+        <p>This website may contain links to third-party websites. These links are provided for convenience and informational purposes only. Proprius Recovery Inc. does not endorse, control, or take responsibility for the content, privacy policies, or practices of any third-party sites.</p>
 
-            <h2>5. No Surprises Act Information</h2>
-            <p>Information about the No Surprises Act and Independent Dispute Resolution (IDR) process is provided for educational purposes only. Laws and regulations change frequently. We recommend consulting with legal counsel for the most current information regarding your specific situation.</p>
+        <h2>7. Accuracy of Information</h2>
+        <p>Information about the No Surprises Act, IDR process, and healthcare regulations is subject to change. Laws and regulations may be amended, and court decisions may affect interpretation. We endeavor to update our information, but we cannot guarantee that all content reflects the most current legal developments.</p>
 
-            <h2>6. Statistics and Data</h2>
-            <p>Any statistics, percentages, or data presented on this website are based on our internal records or publicly available information at the time of publication. These figures may not reflect current conditions and should not be relied upon for decision-making purposes.</p>
+        <h2>8. Limitation of Liability</h2>
+        <p>In no event shall Proprius Recovery Inc., its directors, officers, employees, or agents be liable for any direct, indirect, incidental, special, consequential, or punitive damages arising out of or in connection with your use of this website or our services, whether based on warranty, contract, tort, or any other legal theory.</p>
 
-            <h2>7. Third-Party Content</h2>
-            <p>This website may contain links to third-party websites or reference third-party content. We do not endorse, control, or assume responsibility for any third-party content. Use of third-party websites is at your own risk.</p>
+        <h2>9. Healthcare Provider Responsibility</h2>
+        <p>Healthcare providers engaging our services remain responsible for:</p>
+        <ul>
+            <li>Ensuring the accuracy of information provided to us</li>
+            <li>Maintaining proper medical records and documentation</li>
+            <li>Compliance with all applicable healthcare laws and regulations</li>
+            <li>Making informed business decisions regarding their practice</li>
+        </ul>
 
-            <h2>8. Professional Responsibility</h2>
-            <p>Proprius Recovery Inc. works with licensed professionals in specific jurisdictions. The availability of our services may be limited by state regulations, professional responsibility rules, conflict of interest considerations, and other legal limitations.</p>
+        <h2>10. Regulatory Compliance</h2>
+        <p>The No Surprises Act and IDR process are governed by federal regulations administered by the Departments of Health and Human Services, Labor, and Treasury. State laws may also apply. This disclaimer does not override or supersede any applicable federal or state laws or regulations.</p>
 
-            <h2>9. HIPAA and Protected Health Information</h2>
-            <div class="warning-box">
-                <p><strong>Warning:</strong> Do not submit Protected Health Information (PHI) through our general contact forms or unsecured email. PHI should only be transmitted through secure, HIPAA-compliant channels after a formal client relationship has been established.</p>
-            </div>
+        <h2>11. Changes to This Disclaimer</h2>
+        <p>We reserve the right to modify this disclaimer at any time without prior notice. Changes will be effective immediately upon posting to this website. Your continued use of our website and services after any changes constitutes acceptance of the modified disclaimer.</p>
 
-            <h2>10. Accuracy of Information</h2>
-            <p>While we strive to provide accurate and up-to-date information, we make no warranties or representations about the accuracy, completeness, or timeliness of any information on this website. Information may contain errors or become outdated without notice.</p>
-
-            <h2>11. Limitation of Liability</h2>
-            <p>To the fullest extent permitted by law, Proprius Recovery Inc. disclaims all liability for any damages arising from your use of this website or reliance on any information provided herein.</p>
-
-            <h2>12. Indemnification</h2>
-            <p>By using this website, you agree to indemnify and hold harmless Proprius Recovery Inc. and its officers, directors, employees, and agents from any claims, damages, or expenses arising from your use of this website or violation of this disclaimer.</p>
-
-            <h2>13. Jurisdiction</h2>
-            <p>This disclaimer is governed by the laws of the State of California. Any disputes arising from this disclaimer or your use of this website shall be resolved in the courts of Los Angeles County, California.</p>
-
-            <h2>14. Changes to Disclaimer</h2>
-            <p>We reserve the right to modify this disclaimer at any time. Changes will be effective immediately upon posting to this website. Your continued use of the website constitutes acceptance of any modifications.</p>
-
-            <h2>15. Contact Information</h2>
-            <p>If you have questions about this disclaimer or our services, please contact us:</p>
-            <p>
-                <strong>Proprius Recovery Inc.</strong><br>
-                9604 Artesia Blvd. Suite 104<br>
-                Bellflower, CA 90706<br>
-                Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a><br>
-                Phone: (917) 647-5031
-            </p>
-
-            <div class="info-box">
-                <p><strong>By using this website, you acknowledge that you have read, understood, and agree to be bound by this Legal Disclaimer.</strong></p>
-            </div>
-        </div>
+        <h2>12. Contact Us</h2>
+        <p>If you have questions about this disclaimer, please contact us:</p>
+        <p><strong>Proprius Recovery Inc.</strong><br>
+        9604 Artesia Blvd. Suite 104<br>
+        Bellflower, CA 90706<br>
+        Phone: <a href="tel:+19176475031">(917) 647-5031</a><br>
+        Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a></p>
     </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Proprius Recovery Inc. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="disclaimer.html">Disclaimer</a>
-            </div>
-        </div>
-    </footer>
+    <footer class="footer"><div class="container"><p>&copy; 2025 Proprius Recovery Inc. All rights reserved. | <a href="/">Home</a> | <a href="privacy-policy.html">Privacy</a> | <a href="terms-of-service.html">Terms</a></p></div></footer>
 </body>
 </html>
