--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,159 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service | Proprius Recovery</title>
-    <meta name="description" content="Terms of Service for Proprius Recovery. Read our terms and conditions for using our medical revenue recovery services.">
+    <title>Terms of Service | Proprius Recovery - Medical Revenue Recovery Services</title>
+    <meta name="description" content="Terms of Service for Proprius Recovery Inc. Review our terms and conditions for using our medical revenue recovery and IDR arbitration services.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.proprius-recovery.com/terms-of-service.html">
+    <meta property="og:title" content="Terms of Service | Proprius Recovery">
+    <meta property="og:description" content="Terms of Service for Proprius Recovery medical revenue recovery services.">
+    <meta property="og:url" content="https://www.proprius-recovery.com/terms-of-service.html">
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
     <style>
-        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--accent-red-light:#ef4444;--text-light:#fff;--text-muted:#94a3b8;--text-dark:#1e293b;--bg-cream:#f8fafc;--bg-warm:#f1f5f9;--font-heading:'Montserrat',sans-serif;--font-body:'Open Sans',sans-serif;--transition:all 0.3s ease}
-        *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
-        html{scroll-behavior:smooth}
-        body{font-family:var(--font-body);color:var(--text-dark);background-color:var(--bg-cream);line-height:1.7}
-        .container{max-width:900px;margin:0 auto;padding:0 1.5rem}
-        .navbar{position:fixed;top:0;left:0;right:0;z-index:1000;padding:0.75rem 0;background:rgba(30,58,138,0.98);backdrop-filter:blur(20px);border-bottom:3px solid var(--accent-red)}
-        .navbar .container{max-width:1200px;display:flex;align-items:center;justify-content:space-between}
-        .logo{display:flex;align-items:center;gap:0.75rem;text-decoration:none}
-        .logo img{height:50px;width:auto}
-        .nav-links{display:flex;align-items:center;gap:2rem;list-style:none}
-        .nav-links a{color:var(--text-muted);text-decoration:none;font-size:0.95rem;font-weight:500;transition:var(--transition)}
-        .nav-links a:hover{color:var(--text-light)}
-        .btn{display:inline-flex;align-items:center;justify-content:center;padding:0.75rem 1.5rem;font-family:var(--font-body);font-size:0.9rem;font-weight:600;text-decoration:none;border-radius:6px;transition:var(--transition)}
-        .btn-primary{background:linear-gradient(135deg,#dc2626,#ef4444);color:#fff}
-        .btn-primary:hover{transform:translateY(-2px);box-shadow:0 8px 25px rgba(220,38,38,0.4)}
-        .page-header{background:linear-gradient(135deg,var(--primary-blue) 0%,#1e40af 100%);padding:10rem 0 4rem;text-align:center}
-        .page-header h1{font-family:var(--font-heading);font-size:clamp(2.5rem,5vw,3.5rem);color:var(--text-light);margin-bottom:1rem}
-        .page-header p{color:var(--text-muted);font-size:1.1rem}
-        .legal-content{padding:4rem 0}
-        .legal-content h2{font-family:var(--font-heading);font-size:1.75rem;color:var(--primary-blue);margin:2.5rem 0 1rem;padding-bottom:0.5rem;border-bottom:3px solid var(--accent-red)}
-        .legal-content h3{font-family:var(--font-heading);font-size:1.35rem;color:var(--primary-blue);margin:2rem 0 0.75rem}
-        .legal-content p{color:#475569;margin-bottom:1rem;font-size:1.05rem}
-        .legal-content ul,.legal-content ol{margin:1rem 0 1.5rem 1.5rem;color:#475569}
-        .legal-content li{margin-bottom:0.5rem;font-size:1.05rem}
-        .legal-content a{color:var(--accent-red);text-decoration:none}
-        .legal-content a:hover{text-decoration:underline}
-        .effective-date{background:var(--bg-warm);padding:1rem 1.5rem;border-radius:8px;border-left:4px solid var(--accent-red);margin-bottom:2rem}
-        .effective-date p{margin:0;font-weight:500}
-        .highlight-box{background:#fef2f2;border:1px solid var(--accent-red);border-radius:8px;padding:1.5rem;margin:1.5rem 0}
-        .highlight-box p{margin:0;color:#991b1b}
-        .footer{background:#0f172a;padding:3rem 0;text-align:center}
-        .footer p{color:var(--text-muted);font-size:0.9rem}
-        .footer-links{display:flex;justify-content:center;gap:2rem;margin-top:1rem;flex-wrap:wrap}
-        .footer-links a{color:var(--text-muted);text-decoration:none;font-size:0.9rem;transition:var(--transition)}
-        .footer-links a:hover{color:var(--accent-red-light)}
-        @media(max-width:768px){.nav-links{display:none}.page-header{padding:8rem 0 3rem}}
+        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--text-dark:#1e293b;--text-body:#475569;--bg-light:#f8fafc}
+        *{box-sizing:border-box;margin:0;padding:0}
+        body{font-family:'Open Sans',sans-serif;color:var(--text-dark);background:var(--bg-light);line-height:1.8}
+        h1,h2,h3{font-family:'Montserrat',sans-serif;color:var(--primary-blue)}
+        .navbar{background:var(--primary-blue);padding:1rem 0;border-bottom:3px solid var(--accent-red)}
+        .navbar .container{max-width:1200px;margin:0 auto;padding:0 1.5rem;display:flex;align-items:center;justify-content:space-between}
+        .logo img{height:50px}
+        .nav-link{color:#fff;text-decoration:none;font-weight:600}
+        .content{max-width:900px;margin:0 auto;padding:4rem 1.5rem}
+        h1{font-size:2.5rem;margin-bottom:1rem}
+        .last-updated{color:var(--text-body);margin-bottom:2rem}
+        h2{font-size:1.5rem;margin:2rem 0 1rem;padding-top:1rem;border-top:1px solid #e2e8f0}
+        p,li{color:var(--text-body);margin-bottom:1rem}
+        ul{padding-left:1.5rem}
+        a{color:var(--accent-red)}
+        .footer{background:#0f172a;color:#94a3b8;padding:2rem 0;text-align:center;margin-top:4rem}
+        .footer a{color:#ef4444}
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo"><img src="logo.png" alt="Proprius Recovery"></a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#contact" class="btn btn-primary">Get Free Analysis</a></li>
-            </ul>
-        </div>
-    </nav>
+    <nav class="navbar"><div class="container"><a href="/" class="logo"><img src="logo.png" alt="Proprius Recovery"></a><a href="/" class="nav-link">← Back to Home</a></div></nav>
+    <main class="content">
+        <h1>Terms of Service</h1>
+        <p class="last-updated">Last Updated: January 24, 2025</p>
+        
+        <p>Welcome to Proprius Recovery Inc. These Terms of Service ("Terms") govern your use of our website www.proprius-recovery.com and our medical revenue recovery services. By accessing our website or using our services, you agree to be bound by these Terms.</p>
 
-    <header class="page-header">
-        <div class="container">
-            <h1>Terms of Service</h1>
-            <p>Please read these terms carefully before using our services</p>
-        </div>
-    </header>
+        <h2>1. Services Description</h2>
+        <p>Proprius Recovery Inc. provides medical revenue recovery services for out-of-network healthcare providers, including but not limited to:</p>
+        <ul>
+            <li>Analysis of underpaid Explanation of Benefits (EOBs)</li>
+            <li>Preparation and filing of Independent Dispute Resolution (IDR) claims under the No Surprises Act</li>
+            <li>Negotiation with insurance companies on behalf of healthcare providers</li>
+            <li>Documentation preparation and case management for arbitration proceedings</li>
+        </ul>
 
-    <main class="legal-content">
-        <div class="container">
-            <div class="effective-date">
-                <p><strong>Effective Date:</strong> January 1, 2025 | <strong>Last Updated:</strong> January 1, 2025</p>
-            </div>
+        <h2>2. Eligibility</h2>
+        <p>Our services are available to licensed healthcare providers and medical practices in the United States. By using our services, you represent that you are a licensed healthcare provider or authorized representative of a medical practice.</p>
 
-            <h2>1. Acceptance of Terms</h2>
-            <p>Welcome to Proprius Recovery, a service provided by Proprius Recovery Inc. ("Company," "we," "us," or "our"). These Terms of Service ("Terms") govern your access to and use of our website, services, and any related content or materials (collectively, the "Services").</p>
-            <p>By accessing or using our Services, you agree to be bound by these Terms. If you do not agree to these Terms, please do not use our Services.</p>
+        <h2>3. Contingency Fee Structure</h2>
+        <p>Our services operate on a contingency fee basis:</p>
+        <ul>
+            <li>There are no upfront costs or retainers required</li>
+            <li>We only collect fees upon successful recovery of funds</li>
+            <li>Our fee is a percentage of the recovered amount, as specified in our service agreement</li>
+            <li>If no funds are recovered, you owe us nothing</li>
+        </ul>
 
-            <h2>2. Description of Services</h2>
-            <p>Proprius Recovery provides medical revenue recovery services to healthcare providers, including but not limited to:</p>
-            <ul>
-                <li>Analysis of underpaid medical claims and Explanation of Benefits (EOBs)</li>
-                <li>Preparation and submission of appeals and disputes</li>
-                <li>Representation in Independent Dispute Resolution (IDR) proceedings under the No Surprises Act</li>
-                <li>Negotiation with insurance companies and payers</li>
-                <li>Recovery of underpaid or denied medical claims</li>
-            </ul>
+        <h2>4. Client Responsibilities</h2>
+        <p>When using our services, you agree to:</p>
+        <ul>
+            <li>Provide accurate and complete information regarding your claims</li>
+            <li>Supply all necessary documentation including EOBs, claims, and medical records</li>
+            <li>Respond promptly to our requests for information</li>
+            <li>Authorize us to act on your behalf in dispute resolution proceedings</li>
+            <li>Comply with all applicable laws and regulations</li>
+        </ul>
 
-            <h2>3. Eligibility</h2>
-            <p>Our Services are intended for licensed healthcare providers, medical practices, and healthcare organizations. By using our Services, you represent that you are a licensed healthcare provider or authorized representative of a medical practice or healthcare organization.</p>
+        <h2>5. Limitation of Services</h2>
+        <p>Our services are limited to revenue recovery assistance. We do not provide:</p>
+        <ul>
+            <li>Legal advice (we recommend consulting with a healthcare attorney for legal matters)</li>
+            <li>Medical billing services beyond dispute resolution</li>
+            <li>Guarantees of specific recovery amounts or outcomes</li>
+        </ul>
 
-            <h2>4. Client Relationship</h2>
-            <p>Submission of a contact form or inquiry does not create a client relationship. A formal client relationship is only established upon execution of a written service agreement.</p>
+        <h2>6. Intellectual Property</h2>
+        <p>All content on our website, including text, graphics, logos, and software, is the property of Proprius Recovery Inc. and is protected by copyright and trademark laws. You may not reproduce, distribute, or create derivative works without our written permission.</p>
 
-            <h2>5. Fee Structure</h2>
-            <div class="highlight-box">
-                <p><strong>Contingency Fee Basis:</strong> Our services are provided on a contingency fee basis. You pay no upfront costs, and our fee is a percentage of amounts successfully recovered on your behalf. Specific fee arrangements will be detailed in your service agreement.</p>
-            </div>
+        <h2>7. Confidentiality</h2>
+        <p>We maintain strict confidentiality regarding all client information and medical data. Our confidentiality practices comply with HIPAA requirements and industry standards.</p>
 
-            <h2>6. Client Responsibilities</h2>
-            <p>As a client, you agree to:</p>
-            <ul>
-                <li>Provide accurate and complete information regarding your claims</li>
-                <li>Respond promptly to requests for documentation or information</li>
-                <li>Maintain the confidentiality of any proprietary information shared</li>
-                <li>Not engage in any fraudulent or illegal activity</li>
-                <li>Pay agreed-upon fees for successfully recovered amounts</li>
-            </ul>
+        <h2>8. Limitation of Liability</h2>
+        <p>To the fullest extent permitted by law, Proprius Recovery Inc. shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of our services. Our total liability shall not exceed the fees actually paid by you for our services.</p>
 
-            <h2>7. No Guarantee of Results</h2>
-            <p>While we strive for the best possible outcomes, we cannot and do not guarantee specific results. The outcome of any claim, appeal, or arbitration depends on many factors beyond our control, including applicable laws, insurance company policies, and arbitrator decisions.</p>
+        <h2>9. Indemnification</h2>
+        <p>You agree to indemnify and hold harmless Proprius Recovery Inc., its officers, directors, employees, and agents from any claims, losses, or damages arising from your breach of these Terms or your violation of any law or third-party rights.</p>
 
-            <h2>8. Intellectual Property</h2>
-            <p>All content on our website, including text, graphics, logos, and software, is the property of Proprius Recovery Inc. and is protected by copyright and other intellectual property laws. You may not reproduce, distribute, or create derivative works without our written permission.</p>
+        <h2>10. Termination</h2>
+        <p>Either party may terminate the service relationship with written notice. Upon termination, any pending cases will be handled according to the terms of our service agreement. We reserve the right to terminate services if we believe you have violated these Terms.</p>
 
-            <h2>9. Limitation of Liability</h2>
-            <p>To the maximum extent permitted by law, Proprius Recovery Inc. shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of our Services, even if we have been advised of the possibility of such damages.</p>
-            <p>Our total liability for any claim arising from these Terms or our Services shall not exceed the fees paid to us for the specific services giving rise to the claim.</p>
+        <h2>11. Governing Law</h2>
+        <p>These Terms shall be governed by and construed in accordance with the laws of the State of California, without regard to its conflict of law provisions. Any disputes shall be resolved in the courts of Los Angeles County, California.</p>
 
-            <h2>10. Indemnification</h2>
-            <p>You agree to indemnify, defend, and hold harmless Proprius Recovery Inc. and its officers, directors, employees, and agents from any claims, damages, losses, costs, and expenses arising from your breach of these Terms, your violation of any applicable law, or your provision of false or misleading information.</p>
+        <h2>12. Modifications</h2>
+        <p>We reserve the right to modify these Terms at any time. Changes will be effective upon posting to our website. Your continued use of our services after changes constitutes acceptance of the modified Terms.</p>
 
-            <h2>11. Dispute Resolution</h2>
-            <div class="highlight-box">
-                <p><strong>Binding Arbitration:</strong> Any dispute arising from these Terms or our Services shall be resolved through binding arbitration administered by JAMS in Los Angeles County, California. You waive the right to participate in class actions.</p>
-            </div>
+        <h2>13. Severability</h2>
+        <p>If any provision of these Terms is found to be unenforceable, the remaining provisions shall continue in full force and effect.</p>
 
-            <h2>12. Governing Law</h2>
-            <p>These Terms shall be governed by and construed in accordance with the laws of the State of California, without regard to its conflict of law provisions.</p>
-
-            <h2>13. Modifications to Terms</h2>
-            <p>We reserve the right to modify these Terms at any time. Material changes will be posted on our website with an updated "Last Updated" date. Your continued use of our Services after any changes constitutes acceptance of the modified Terms.</p>
-
-            <h2>14. Termination</h2>
-            <p>Either party may terminate the service relationship upon written notice. Termination does not affect obligations for services already rendered or fees owed for successful recoveries achieved prior to termination.</p>
-
-            <h2>15. Contact Information</h2>
-            <p>If you have questions about these Terms, please contact us:</p>
-            <p>
-                <strong>Proprius Recovery Inc.</strong><br>
-                9604 Artesia Blvd. Suite 104<br>
-                Bellflower, CA 90706<br>
-                Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a><br>
-                Phone: (917) 647-5031
-            </p>
-        </div>
+        <h2>14. Contact Information</h2>
+        <p>For questions about these Terms of Service, please contact us:</p>
+        <p><strong>Proprius Recovery Inc.</strong><br>
+        9604 Artesia Blvd. Suite 104<br>
+        Bellflower, CA 90706<br>
+        Phone: <a href="tel:+19176475031">(917) 647-5031</a><br>
+        Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a></p>
     </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Proprius Recovery Inc. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="disclaimer.html">Disclaimer</a>
-            </div>
-        </div>
-    </footer>
+    <footer class="footer"><div class="container"><p>&copy; 2025 Proprius Recovery Inc. All rights reserved. | <a href="/">Home</a> | <a href="privacy-policy.html">Privacy</a> | <a href="disclaimer.html">Disclaimer</a></p></div></footer>
 </body>
 </html>
