--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,160 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | Proprius Recovery</title>
-    <meta name="description" content="Privacy Policy for Proprius Recovery services. Learn how we collect, use, and protect your personal and medical practice information.">
+    <title>Privacy Policy | Proprius Recovery - Medical Revenue Recovery Services</title>
+    <meta name="description" content="Privacy Policy for Proprius Recovery Inc. Learn how we collect, use, and protect your personal information when using our medical revenue recovery services.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.proprius-recovery.com/privacy-policy.html">
+    <meta property="og:title" content="Privacy Policy | Proprius Recovery">
+    <meta property="og:description" content="Privacy Policy for Proprius Recovery medical revenue recovery services.">
+    <meta property="og:url" content="https://www.proprius-recovery.com/privacy-policy.html">
+    <meta property="og:type" content="website">
+    <link rel="icon" type="image/png" href="logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
     <style>
-        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--accent-red-light:#ef4444;--text-light:#fff;--text-muted:#94a3b8;--text-dark:#1e293b;--bg-cream:#f8fafc;--bg-warm:#f1f5f9;--font-heading:'Montserrat',sans-serif;--font-body:'Open Sans',sans-serif;--transition:all 0.3s ease}
-        *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
-        html{scroll-behavior:smooth}
-        body{font-family:var(--font-body);color:var(--text-dark);background-color:var(--bg-cream);line-height:1.7}
-        .container{max-width:900px;margin:0 auto;padding:0 1.5rem}
-        .navbar{position:fixed;top:0;left:0;right:0;z-index:1000;padding:0.75rem 0;background:rgba(30,58,138,0.98);backdrop-filter:blur(20px);border-bottom:3px solid var(--accent-red)}
-        .navbar .container{max-width:1200px;display:flex;align-items:center;justify-content:space-between}
-        .logo{display:flex;align-items:center;gap:0.75rem;text-decoration:none}
-        .logo img{height:50px;width:auto}
-        .nav-links{display:flex;align-items:center;gap:2rem;list-style:none}
-        .nav-links a{color:var(--text-muted);text-decoration:none;font-size:0.95rem;font-weight:500;transition:var(--transition)}
-        .nav-links a:hover{color:var(--text-light)}
-        .btn{display:inline-flex;align-items:center;justify-content:center;padding:0.75rem 1.5rem;font-family:var(--font-body);font-size:0.9rem;font-weight:600;text-decoration:none;border-radius:6px;transition:var(--transition)}
-        .btn-primary{background:linear-gradient(135deg,#dc2626,#ef4444);color:#fff}
-        .btn-primary:hover{transform:translateY(-2px);box-shadow:0 8px 25px rgba(220,38,38,0.4)}
-        .page-header{background:linear-gradient(135deg,var(--primary-blue) 0%,#1e40af 100%);padding:10rem 0 4rem;text-align:center}
-        .page-header h1{font-family:var(--font-heading);font-size:clamp(2.5rem,5vw,3.5rem);color:var(--text-light);margin-bottom:1rem}
-        .page-header p{color:var(--text-muted);font-size:1.1rem}
-        .legal-content{padding:4rem 0}
-        .legal-content h2{font-family:var(--font-heading);font-size:1.75rem;color:var(--primary-blue);margin:2.5rem 0 1rem;padding-bottom:0.5rem;border-bottom:3px solid var(--accent-red)}
-        .legal-content h3{font-family:var(--font-heading);font-size:1.35rem;color:var(--primary-blue);margin:2rem 0 0.75rem}
-        .legal-content p{color:#475569;margin-bottom:1rem;font-size:1.05rem}
-        .legal-content ul,.legal-content ol{margin:1rem 0 1.5rem 1.5rem;color:#475569}
-        .legal-content li{margin-bottom:0.5rem;font-size:1.05rem}
-        .legal-content a{color:var(--accent-red);text-decoration:none}
-        .legal-content a:hover{text-decoration:underline}
-        .effective-date{background:var(--bg-warm);padding:1rem 1.5rem;border-radius:8px;border-left:4px solid var(--accent-red);margin-bottom:2rem}
-        .effective-date p{margin:0;font-weight:500}
-        .footer{background:#0f172a;padding:3rem 0;text-align:center}
-        .footer p{color:var(--text-muted);font-size:0.9rem}
-        .footer-links{display:flex;justify-content:center;gap:2rem;margin-top:1rem;flex-wrap:wrap}
-        .footer-links a{color:var(--text-muted);text-decoration:none;font-size:0.9rem;transition:var(--transition)}
-        .footer-links a:hover{color:var(--accent-red-light)}
-        @media(max-width:768px){.nav-links{display:none}.page-header{padding:8rem 0 3rem}}
+        :root{--primary-blue:#1e3a8a;--accent-red:#dc2626;--text-dark:#1e293b;--text-body:#475569;--bg-light:#f8fafc}
+        *{box-sizing:border-box;margin:0;padding:0}
+        body{font-family:'Open Sans',sans-serif;color:var(--text-dark);background:var(--bg-light);line-height:1.8}
+        h1,h2,h3{font-family:'Montserrat',sans-serif;color:var(--primary-blue)}
+        .navbar{background:var(--primary-blue);padding:1rem 0;border-bottom:3px solid var(--accent-red)}
+        .navbar .container{max-width:1200px;margin:0 auto;padding:0 1.5rem;display:flex;align-items:center;justify-content:space-between}
+        .logo img{height:50px}
+        .nav-link{color:#fff;text-decoration:none;font-weight:600}
+        .content{max-width:900px;margin:0 auto;padding:4rem 1.5rem}
+        h1{font-size:2.5rem;margin-bottom:1rem}
+        .last-updated{color:var(--text-body);margin-bottom:2rem}
+        h2{font-size:1.5rem;margin:2rem 0 1rem;padding-top:1rem;border-top:1px solid #e2e8f0}
+        p,li{color:var(--text-body);margin-bottom:1rem}
+        ul{padding-left:1.5rem}
+        a{color:var(--accent-red)}
+        .footer{background:#0f172a;color:#94a3b8;padding:2rem 0;text-align:center;margin-top:4rem}
+        .footer a{color:#ef4444}
     </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo"><img src="logo.png" alt="Proprius Recovery"></a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#contact" class="btn btn-primary">Get Free Analysis</a></li>
-            </ul>
-        </div>
-    </nav>
+    <nav class="navbar"><div class="container"><a href="/" class="logo"><img src="logo.png" alt="Proprius Recovery"></a><a href="/" class="nav-link">← Back to Home</a></div></nav>
+    <main class="content">
+        <h1>Privacy Policy</h1>
+        <p class="last-updated">Last Updated: January 24, 2025</p>
+        
+        <p>Proprius Recovery Inc. ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website www.proprius-recovery.com or use our medical revenue recovery services.</p>
 
-    <header class="page-header">
-        <div class="container">
-            <h1>Privacy Policy</h1>
-            <p>How we collect, use, and protect your information</p>
-        </div>
-    </header>
+        <h2>1. Information We Collect</h2>
+        <p>We may collect information about you in various ways:</p>
+        <ul>
+            <li><strong>Personal Data:</strong> Name, email address, phone number, medical specialty, and practice information you provide through our contact forms.</li>
+            <li><strong>Medical Billing Information:</strong> EOBs, claims data, and procedure information necessary to provide our revenue recovery services.</li>
+            <li><strong>Usage Data:</strong> Information about how you access and use our website, including IP address, browser type, pages visited, and time spent.</li>
+            <li><strong>Cookies:</strong> Small data files stored on your device to improve your experience.</li>
+        </ul>
 
-    <main class="legal-content">
-        <div class="container">
-            <div class="effective-date">
-                <p><strong>Effective Date:</strong> January 1, 2025 | <strong>Last Updated:</strong> January 1, 2025</p>
-            </div>
+        <h2>2. How We Use Your Information</h2>
+        <p>We use collected information to:</p>
+        <ul>
+            <li>Provide, maintain, and improve our medical revenue recovery services</li>
+            <li>Communicate with you about your inquiries and our services</li>
+            <li>Process and manage your revenue recovery cases</li>
+            <li>Send you relevant updates about the No Surprises Act and IDR arbitration</li>
+            <li>Comply with legal obligations</li>
+            <li>Protect against fraud and unauthorized access</li>
+        </ul>
 
-            <h2>1. Introduction</h2>
-            <p>Proprius Recovery Inc. ("Company," "we," "us," or "our") is committed to protecting your privacy. This Privacy Policy describes how we collect, use, disclose, and safeguard your information when you visit our website, use our services, or otherwise interact with us.</p>
+        <h2>3. HIPAA Compliance</h2>
+        <p>We understand the sensitive nature of medical information. We maintain appropriate administrative, technical, and physical safeguards to protect the privacy and security of your health information in compliance with HIPAA regulations. We will only use or disclose protected health information (PHI) as permitted by law and our Business Associate Agreement with healthcare providers.</p>
 
-            <h2>2. Information We Collect</h2>
-            <h3>Personal Information</h3>
-            <p>We may collect personal information that you voluntarily provide to us, including:</p>
-            <ul>
-                <li>Name, email address, phone number, and mailing address</li>
-                <li>Professional credentials and medical license information</li>
-                <li>Practice information (specialty, location, NPI number)</li>
-                <li>Financial information related to claims and reimbursements</li>
-                <li>Communications you send to us</li>
-            </ul>
+        <h2>4. Information Sharing</h2>
+        <p>We do not sell your personal information. We may share your information with:</p>
+        <ul>
+            <li><strong>Service Providers:</strong> Third parties who assist in operating our website and providing services</li>
+            <li><strong>IDR Entities:</strong> Certified arbitrators as required for the dispute resolution process</li>
+            <li><strong>Insurance Companies:</strong> As necessary to pursue your revenue recovery claims</li>
+            <li><strong>Legal Requirements:</strong> When required by law or to protect our rights</li>
+        </ul>
 
-            <h3>Automatically Collected Information</h3>
-            <p>When you visit our website, we automatically collect certain information about your device, including information about your web browser, IP address, time zone, and some of the cookies that are installed on your device.</p>
+        <h2>5. Data Security</h2>
+        <p>We implement industry-standard security measures including encryption, secure servers, and access controls to protect your information. However, no method of transmission over the Internet is 100% secure.</p>
 
-            <h2>3. How We Use Your Information</h2>
-            <p>We use the information we collect to:</p>
-            <ul>
-                <li>Provide, operate, and maintain our services</li>
-                <li>Process and manage your medical revenue recovery claims</li>
-                <li>Communicate with you about your cases and our services</li>
-                <li>Send you marketing communications (with your consent)</li>
-                <li>Comply with legal obligations</li>
-                <li>Protect against fraudulent or illegal activity</li>
-            </ul>
+        <h2>6. Your Rights</h2>
+        <p>You have the right to:</p>
+        <ul>
+            <li>Access the personal information we hold about you</li>
+            <li>Request correction of inaccurate information</li>
+            <li>Request deletion of your personal information</li>
+            <li>Opt-out of marketing communications</li>
+            <li>Receive a copy of your data in a portable format</li>
+        </ul>
 
-            <h2>4. Information Sharing</h2>
-            <p>We may share your information with:</p>
-            <ul>
-                <li>Service providers who assist in our operations</li>
-                <li>Legal counsel and professional advisors</li>
-                <li>Insurance companies and arbitration entities (as necessary for claims)</li>
-                <li>Government authorities when required by law</li>
-            </ul>
-            <p>We do not sell your personal information to third parties.</p>
+        <h2>7. California Privacy Rights</h2>
+        <p>California residents have additional rights under the CCPA, including the right to know what personal information is collected and how it's used, and the right to request deletion of personal information.</p>
 
-            <h2>5. Data Security</h2>
-            <p>We implement appropriate technical and organizational security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet or electronic storage is 100% secure.</p>
+        <h2>8. Cookies Policy</h2>
+        <p>We use cookies and similar tracking technologies to enhance your experience. You can control cookies through your browser settings. Essential cookies are necessary for the website to function properly.</p>
 
-            <h2>6. Your Rights</h2>
-            <p>Depending on your location, you may have certain rights regarding your personal information, including the right to access, correct, delete, or port your data. To exercise these rights, please contact us at <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a>.</p>
+        <h2>9. Third-Party Links</h2>
+        <p>Our website may contain links to third-party sites. We are not responsible for the privacy practices of these external sites.</p>
 
-            <h2>7. California Privacy Rights (CCPA/CPRA)</h2>
-            <p>If you are a California resident, you have additional rights under the California Consumer Privacy Act (CCPA) and California Privacy Rights Act (CPRA), including the right to know what personal information is collected, the right to delete personal information, and the right to opt-out of the sale of personal information.</p>
-            <p><strong>We do not sell your personal information.</strong></p>
-            <p>To submit a verifiable consumer request, contact us at <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a> or call (917) 647-5031.</p>
+        <h2>10. Children's Privacy</h2>
+        <p>Our services are not directed to individuals under 18. We do not knowingly collect personal information from children.</p>
 
-            <h2>8. HIPAA Compliance</h2>
-            <p>To the extent that we receive, create, or maintain Protected Health Information (PHI) as defined under the Health Insurance Portability and Accountability Act (HIPAA), we comply with applicable HIPAA requirements.</p>
+        <h2>11. Changes to This Policy</h2>
+        <p>We may update this Privacy Policy periodically. The updated version will be indicated by the "Last Updated" date at the top of this page.</p>
 
-            <h2>9. Data Retention</h2>
-            <p>We retain your personal information for as long as necessary to fulfill the purposes for which it was collected, including to satisfy legal, accounting, or reporting requirements. Medical and financial records related to claims are retained for a minimum of seven (7) years.</p>
-
-            <h2>10. Third-Party Links</h2>
-            <p>Our website may contain links to third-party websites. We are not responsible for the privacy practices of these external sites.</p>
-
-            <h2>11. Children's Privacy</h2>
-            <p>Our services are not directed to individuals under 18 years of age. We do not knowingly collect personal information from children.</p>
-
-            <h2>12. Changes to This Privacy Policy</h2>
-            <p>We may update this Privacy Policy from time to time. We will notify you of material changes by posting the updated Policy on our website with a new "Last Updated" date.</p>
-
-            <h2>13. Contact Us</h2>
-            <p>If you have questions or concerns about this Privacy Policy, please contact us:</p>
-            <p>
-                <strong>Proprius Recovery Inc.</strong><br>
-                Attn: Privacy Officer<br>
-                9604 Artesia Blvd. Suite 104<br>
-                Bellflower, CA 90706<br>
-                Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a><br>
-                Phone: (917) 647-5031
-            </p>
-        </div>
+        <h2>12. Contact Us</h2>
+        <p>For questions about this Privacy Policy or our privacy practices, please contact us:</p>
+        <p><strong>Proprius Recovery Inc.</strong><br>
+        9604 Artesia Blvd. Suite 104<br>
+        Bellflower, CA 90706<br>
+        Phone: <a href="tel:+19176475031">(917) 647-5031</a><br>
+        Email: <a href="mailto:adokukin@dr-rehab.com">adokukin@dr-rehab.com</a></p>
     </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Proprius Recovery Inc. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="disclaimer.html">Disclaimer</a>
-            </div>
-        </div>
-    </footer>
+    <footer class="footer"><div class="container"><p>&copy; 2025 Proprius Recovery Inc. All rights reserved. | <a href="/">Home</a> | <a href="terms-of-service.html">Terms</a> | <a href="disclaimer.html">Disclaimer</a></p></div></footer>
 </body>
 </html>
